Exclude from git uploaded files

--- a/.gitignore
+++ b/.gitignore
@@ -109,3 +109,8 @@ Desktop.ini
 # Maven Wrapper
 ######################
 !.mvn/wrapper/maven-wrapper.jar
+
+#####################
+# Project Specific
+#####################
+files/*
