--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -44,6 +44,7 @@ spring:
 application:
   upload:
     saveFolder: ./files
+    deleteFilesOnShutDown: true
   async:
     core-pool-size: 2
     max-pool-size: 10
